--- a/Rapport/papier1/christophe.tex
+++ b/Rapport/papier1/christophe.tex
@@ -259,7 +259,7 @@ Notre objectif à terme est de construire une ligne de produits qui capturerait 
 
 Des travaux relatifs à la construction de workflows scientifiques ont été menés...
 
-Notons que la pertinence d'un ssytème sur la langue n'est pas seulement oui ou non mais est quantifiée ce point reste une piste ouverte.
+Notons que la pertinence d'un système sur la langue n'est pas seulement oui ou non mais est quantifiée ce point reste une piste ouverte.
 
 
 %---------------------------------------------------------------
